joy-alemazung/alemazung-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: alemazung-app
  name: alemazung-app
  namespace: joy-alemazung
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: alemazung-app
      app: alemazung-app
  template:
    metadata:
      labels:
        io.kompose.service: alemazung-app
        app: alemazung-app
    spec:
      containers:
        - image: ghcr.io/davidcode2/dr-joy-alemazung:0.13.26
          name: alemazung-app
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - containerPort: 3000
      restartPolicy: Always
