joy-alemazung/alemazung-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alemazung-app-service
  namespace: alemazung
spec:
  # This makes the service only reachable from within the cluster
  # The ingress controller will talk to it.
  type: ClusterIP
  ports:
    - name: http
      port: 80 # The port the service will be available on
      targetPort: 3000 
  selector:
    # This MUST match the labels on your pods in 'alemazung-app-deployment.yaml'
    # Check your deployment's spec.template.metadata.labels
    app: alemazung-app
